--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
   <script type="text/javascript">
     (function () {
-      emailjs.init("PFFbHPlgJe00EVOQq"); // Obtain your user ID at the dashboard https://dashboard.emailjs.com/integration
+      emailjs.init("PFFbHPlgJe00EVOQq");
     })();
   </script>
 </body>
